--- a/Bypass/Bypass.csproj
+++ b/Bypass/Bypass.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
+    <PackageReference Include="Oracle.ManagedDataAccess" Version="21.8.0" />
   </ItemGroup>
 
 </Project>
