--- a/Bypass/Bypass.csproj
+++ b/Bypass/Bypass.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Oracle.ManagedDataAccess" Version="21.8.0" />
+    <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="3.21.80" />
   </ItemGroup>
 
 </Project>
